# django-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  Dockerfile  LICENSE.md  Makefile  Procfile  README.md  app.json  compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  tests.yml
django3_template/: asgi.py  urls.py  wsgi.py
django3_template/home/: apps.py  urls.py  views.py
django3_template/home/templates/home/: index.html
django3_template/settings/: base.py  dev.py  test.py
django3_template/templates/: base.html
django3_template/utils/: apps.py  factories.py
django_template/: asgi.py  celery.py  urls.py  views.py  wsgi.py
django_template/auth/: apps.py  urls.py  views.py
django_template/home/: apps.py  tasks.py  views.py
django_template/home/templates/home/: index.html
django_template/locale/tl/LC_MESSAGES/: django.mo  django.po
django_template/settings/: base.py  dev.py  test.py
django_template/static_src/tailwind/: styles.css
django_template/staticfiles_src/: styles.css
django_template/templates/: base.html
django_template/users/: apps.py  models.py  serializers.py
django_template/users/migrations/: 0001_initial.py
django_template/utils/: apps.py  factories.py
docker/: .bash_aliases
docs/: deploying_to_dokku.md
