[tool.poetry]
name = "django-template"
version = "0.0.0"
description = ""
authors = ["boggs <hello@boggs.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.17"
django-extensions = "^3.2.3"
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
whitenoise = "^6.8.2"
ipython = "^8.31.0"
psycopg = "^3.2.3"
sentry-sdk = "^2.19.2"
factory-boy = "^3.3.1"

[tool.poetry.group.dev.dependencies]
werkzeug = "^3.1.3"
watchdog = "^6.0.0"
django-browser-reload = "^1.17.0"
django-silk = "^5.3.2"
ruff = "*"
pre-commit = "^4.0.1"
bandit = "^1.8.0"
detect-secrets = "^1.5.0"
djhtml = "^3.0.7"
dslr = { version = "*", extras = ["psycopg2-binary"] }
django-types = "*"
pyright = "^1.1.391"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
  "E",   # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "F",   # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "W",   # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "I",   # https://docs.astral.sh/ruff/rules/#isort-i
  "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "DJ",  # https://docs.astral.sh/ruff/rules/#flake8-django-dj
  "T10", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
]
ignore = [
  "SIM108", # don't recommend ternary operator
]
exclude = ["django_template/*/migrations/*.py"]

[tool.ruff.format]
exclude = ["django_template/*/migrations/*.py"]

[tool.bandit]
exclude_dirs = ["tests"]
