[tool.poetry]
name = "django-template"
version = "0.0.0"
description = ""
authors = ["boggs <hello@boggs.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
Django = "^5.2.10"
django-extensions = "^3.2.3"
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
whitenoise = "^6.11.0"
ipython = "^8.38.0"
psycopg = "^3.3.2"
sentry-sdk = "^2.49.0"
factory-boy = "^3.3.3"

[tool.poetry.group.dev.dependencies]
werkzeug = "^3.1.5"
watchdog = "^6.0.0"
django-browser-reload = "^1.21.0"
django-silk = "^5.4.3"
ruff = "*"
pre-commit = "^4.5.1"
bandit = "^1.9.2"
detect-secrets = "^1.5.0"
djlint = "^1.36.4"
dslr = "*"
django-types = "*"
pyright = "^1.1.408"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
  "E",   # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "F",   # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "W",   # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "I",   # https://docs.astral.sh/ruff/rules/#isort-i
  "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "DJ",  # https://docs.astral.sh/ruff/rules/#flake8-django-dj
  "T10", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
]
ignore = [
  "SIM108", # don't recommend ternary operator
]
exclude = ["django_template/*/migrations/*.py"]

[tool.ruff.format]
exclude = ["django_template/*/migrations/*.py"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.djlint]
# https://www.djlint.com/docs/linter/#rules
ignore = "H029,H030,H031"
